# Meraki

./: .gitignore  Detector.py  FrontendController.py  README.md  TestImage.py  TestImageBuilder.py  User.py  UserModel.py  buildspec.yml  extractFeats.py  mysql_connection.py  pubspec.yaml  requirements.txt  svm.pkl  test_FrontendController.py
Backend/: Detector.py  README.md  mysql_connection.py  requirements.txt
Backend-detctpd/: .gitignore  TestImage.py  TestImageBuilder.py  extractFeats.py  extractPen.py  test_Detector.py  test_mysql_connection.py
Backend/Data/: DetectPD_SMOTE.csv  TestImage.py  TestImageBuilder.py  extractFeats.py  extractTemplate.py  image_to_csv.py  main.py  requirements.txt  writing.py
Backend/DetectPD/: .gitignore  Detector.py  FrontendController.py  README.md  RMS.txt  TestImageBuilder.py  User.py  UserModel.py  app.py  database.db  extractFeats.py  extractPen.py  extractTemplate.py  format.md  format.txt  mysql_connection.py  requirements.txt  test.py  test_Detector.py  test_FrontendController.py  test_mysql_connection.py
Backend/DetectPD_lambda/: .gitignore  lambda_function.py  requirements.txt
Backend/cpp to python conversion/DetectTest/: CMakeLists.txt  extractFeats.cpp  extractPen.cpp  extractTemplate.cpp
Frontend/detact_pd/: README.md  pubspec.yaml
Frontend/detect_pd/: pubspec.yaml
Results/: RMS401.txt
android/app/: build.gradle
ios/Runner.xcodeproj/: project.pbxproj
lib/services/: api-camera.dart  api-gallery.dart
models/: VotingClassifier.pickle
results/: RMS400.txt  RMS401.txt  RMS403.txt
(+1083 files in other folders)
